<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    >


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="80dp">
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/property_type"/>
        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:id="@+id/propertyType" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="80dp">
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/state">

        </TextView>
        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:id="@+id/state" />
    </LinearLayout>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buyRent"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buy"
            android:text="@string/buy"
            android:checked="true"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rent"
            android:text="@string/rent"/>

    </RadioGroup>
    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/black"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="80dp">
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/suburb"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:id="@+id/suburb"
            android:hint="@string/suburb_hint"/>


    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/black"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:text="Price"
            />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:hint="@string/from_hint"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:hint="@string/to_hint"/>
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/black"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="80dp">
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/bedrooms"/>

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:id="@+id/bedrooms" />
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/black"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="80dp">
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/bathrooms"/>
        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:id="@+id/bathrooms" />
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/black"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/car_spaces"/>

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:id="@+id/carSpace" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/black"/>
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/black"/>

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_gravity="center"
        tools:text="@string/search"/>


</LinearLayout>