<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="start"
        android:layout_marginStart="15dp"
        app:srcCompat="@drawable/pic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:fontFamily="@raw/anton"
        android:text="@string/hello_back"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/sign_in"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/userEdt"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:drawableStart="@drawable/person"
        android:hint="@string/user_name"
        android:inputType="text"
        android:padding="10dp" />

    <EditText
        android:id="@+id/passwordEdt"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:drawableStart="@drawable/lock"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:padding="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:text="@string/forget_password"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Login"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/black"
        android:text="@string/go"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/new_user"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />


</LinearLayout>